--- a/text_format.html
+++ b/text_format.html
@@ -4,10 +4,28 @@
         <title>Text Format</title>
     </head>
     <body>
+        <h3>This is day 2 of learning html</h3>
         <b>This is bold tag</b><br>
         <strong>This is strong tag</strong><br>
         <i>this is for italic style of text</i><br>
         <em>this is for emphasis style of text</em><br>
+        <u>this tag is used to underline the text</u><br>
+        <del>this tag is used to cut the text from middle</del><br>
+
+        <h3>tags for writing chemical formulas or power of numbers</h3>
+        <h4>power of 10 : 10<sup>2</sup></h4>
+        <h4>for chemical formula of water: H<sub>2</sub>O<h4>
+        <hr>
+            <h3>Use of differnt tags in paragraph</h3>
+
+        <h3>chatrapati shivaji maharaj</h3>
+        <hr>
+        <p> <strong>Shivaji Shahaji Bhonsale</strong>, Born on  19<sup>th</sup> and died on February 1630  3<sup>rd</sup> April 1680. was an<mark> Indian ruler </mark>and a <u>member of the Bhonsle dynasty</u>.Shivaji inherited a jagir from his father who served as a <i>retainer for the Sultanate of Bijapur</i>, which later formed the genesis of the Maratha Kingdom. In 1674, he was formally crowned the <b><u><mark>Chhatrapati</mark></u></b> of his realm at Raigad Fort.</p>
+        <br>
+
+        <h3>Virat kohli</h3>
+        <hr>
+        <p><b>Virat Kohli</b> is a prominent <i>Indian international cricketer</i>, widely regarded as one of the <u>greatest batsmen of all time.</u> He is a right-handed top-order batsman who has captained the Indian national team in all three formats (Test, ODI, and T20I) and plays for Royal Challengers Bengaluru in the Indian Premier League (IPL). Kohli has numerous batting records, including the most centuries in ODIs, and hasreceived significant awards, such as the ICC <mark><b>"Cricketer of the Year" </b></mark>in 2017 and 2018. </p>
 
     </body>
 </html>
