--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <titlt>INDEX PAGE</titlt>
+        <title>INDEX PAGE</title>
     </head>
     <body>
         <h1><b></b></h1>
