--- a/list_types.html
+++ b/list_types.html
@@ -1,11 +1,31 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>LIST TYPES</title>
+        <title>List Types</title>
     </head>
     <body>
-
-        
-
+       <ol>
+        <li> Indian cricket team
+            <ul type="disc">
+                <li>Virat</li>
+                <li>Rohit</li>
+                <li>Dhoni</li>
+            </ul>
+        </li>
+        <li> Australia cricket team
+            <ul type="circle">
+                <li>warner</li>
+                <li>maxwell</li>
+                <li>marsh</li>
+            </ul>
+        </li>
+        <li> England cricket team
+            <ul type="square">
+                <li>buttler</li>
+                <li>root</li>
+                <li>cook</li>
+            </ul>
+        </li>
+       </ol>
     </body>
 </html>
