--- a/Table.html
+++ b/Table.html
@@ -201,23 +201,21 @@
     </table>
 
     <hr>
-    <h1>Columnspan Example</h1>
+    <h3>Columnspan Example</h3>
 
     <table border ="2">
-        <thead>
-            
-                <tr>
-                    <th colspan="5">1st semester</th>
-                    <th colspan="5">2nd semester</th>
-                </tr>
-            
+        <thead>            
+            <tr>
+                <th colspan="5">1st semester</th>
+                <th colspan="5">2nd semester</th>
+            </tr>
         </thead>
 
         <tbody>
             <tr>
                 <td>c++</td>
                 <td>oops</td>
-                <td>st</td>
+                <td>software testing</td>
                 <td>java</td>
                 <td>c</td>
                 <td>.net</td>
