--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@
         <title>INDEX PAGE</title>
     </head>
     <body>
+
+        <nav>
+            <a href="index.html" target="blank"> Home</a>
+            <a href="about.html" target="blank"> About us</a>
+            <a href="services.html" target="blank"> Services</a>
+            <a href="contact.html" target="blank"> Contact</a>
+            <a href="product.html" target="blank"> Home</a>
+            <a href="https://www.facebook.com/" target="blank">Facebook</a>
+        </nav>
         <h1><b></b></h1>
         <h2>Hello World</h2>
         <h3>Hello World</h3>
@@ -11,4 +20,19 @@
         <h5>Hello World</h5>
         <h6>Hello World</h6>
     </body>
+    <pre>hi, i'm ashutosh.
+                        This is my first webpage.
+                                                I am learning web development.  
+    </pre>      
+    
+    <p>Lorem ipsum dolor sit amet <q>consectetur adipisicing elit. <abbr title="world health organization">WHO</abbr> llendus.</q> Fuga, iusto?</p>
+
+    <bdo>Lorem ipsum dolor sit amet <q>consectetur adipisicing elit. <abbr title="world health organization">WHO</abbr> llendus.</q> Fuga, iusto?</bdo>
+<br>
+    <bdo dir="rtl">Lorem ipsum dolor sit amet <q>consectetur adipisicing elit. <abbr title="world health organization">WHO</abbr> llendus.</q> Fuga, iusto?</bdo>
+
+    <br>
+
+     <iframe width="360" height="185" src="https://www.youtube.com/embed/ssnPNFQLflY?si=bvXBQQJj5hw-PiJm" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
 </html>
