--- a/example.html
+++ b/example.html
@@ -11,6 +11,6 @@
 <body>
     &lt; html &gt;
     <p>virat is great cricket player  &#127951</p>
-    <p>ronaldo is great football player &#9917</p>
+    <p>ronaldo is great football player &#9917;  fff</p>
 </body>
 </html>
