--- a/form.html
+++ b/form.html
@@ -70,12 +70,12 @@
     </fieldset>
 
     <hr>
-    <fieldset>
-            <legend> <h1>Contact form</h1></legend>
+    <fieldset>     
+    <legend> <h1>Contact form</h1></legend>
 
-             <form>
+    <form >
         <lable>Enter First name: </lable>
-        <input type="text" placeholder="first name"/><br><br>
+        <input type="text"name="first name"/><br><br>
         <lable>Enter Last name: </lable>
         <input type="text" placeholder="last name"/><br><br>
         <lable>Enter mobile number: </lable>
@@ -86,7 +86,7 @@
         <input type="email" placeholder="enter email"/><br><br>
 
         <lable>Enter password</lable>
-        <input type="password" placeholder="Password" view /><br><br>
+        <input type="password" placeholder="Password" color="red"/><br><br>
 
        
 
